# user-lib-rs

./: Cargo.toml  Readme.md
migrations/: 100_user.sql  101_token.sql  102_credential.sql  1_user.sql  2_token.sql  3_credential.sql
sql/schema/token/: delete_expired_tokens.sql  find_with_user_id.sql  insert.sql  update.sql
sql/schema/user/: find_with_credential.sql  find_with_id.sql  insert.sql
src/: lib.rs
src/dao/: credential.rs  mod.rs  token.rs  user.rs
src/domain/: credential.rs  error.rs  mod.rs  token.rs  user.rs
src/domain/impls/: credential.rs
src/dto/: credential.rs  hash_result.rs  mod.rs  token.rs  users.rs
src/resources/: error_messages.rs  expirations.rs  mod.rs  variable_lengths.rs
src/service/: mod.rs  user.rs
src/utils/: hasher.rs
src/validation/: mod.rs  user_validator.rs
