[package]
name = "user-lib"
version = "0.1.0"
edition = "2021"
authors = ["Franklin E. Blanco"]
description = "A library to add secure user authentication to any service."
license = "MIT"
readme = "README.md"
repository = "https://github.com/franklinblanco/user-lib.git"

[lib]
[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
chrono = { version = "0.4", features = [ "serde" ] }
ring = "0.16.20"
data-encoding = "2.3.2"
futures-util = "0.3"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }